Adds link to livefeed

--- a/web/app/themes/inside/views/parts/title-banner.twig
+++ b/web/app/themes/inside/views/parts/title-banner.twig
@@ -1,4 +1,4 @@
-<div class="container-fluid tb_bloc">
+<div class="container-fluid tb_bloc" id="livefeed">
     <div class="row">
         <div class="col">
             <h2 class="tb_title">{{ title }}</h2>
