--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -9,7 +9,7 @@
 		</p>
 		<div class="col-6"></div>
 		<div class="col-md-6 col-xs-12 d-flex justify-content-end">
-			<a href="#" class="jpo_btn">Vous êtes venus pour le live ? C'est par ici !  →</a>
+			<a href="#livefeed" class="jpo_btn">Vous êtes venus pour le live ? C'est par ici !  →</a>
 		</div>
 	</div>
 </div>
