--- a/web/app/themes/inside/views/sections/section-bigtitle.twig
+++ b/web/app/themes/inside/views/sections/section-bigtitle.twig
@@ -1,4 +1,4 @@
-<div class="containerfull bigtitle">
-  <p class="title bigtitle">Inside eikon →</p>
-  <p class="title bigtitle">École professionnelle</p>
+<div class="containerfull bigtitle scroll-container">
+  <p class="title bigtitle scroll-left">Inside eikon →</p>
+  <p class="title bigtitle scroll-right">École professionnelle</p>
 </div>
