--- a/web/app/themes/inside/views/page.twig
+++ b/web/app/themes/inside/views/page.twig
@@ -16,7 +16,7 @@
 		</div>
 	</div>
 	{% if post.get_field('videomaton') %}
-		{% include 'parts/title-banner.twig' with { title: "Photo maton" } %}
+		{% include 'parts/title-banner.twig' with { title: "Videomaton" } %}
 		<div class="container py-5">
       <div class="col-6 mx-auto">
         <div class="ratio ratio-1x1">
