--- a/web/app/themes/inside/views/parts/title-banner.twig
+++ b/web/app/themes/inside/views/parts/title-banner.twig
@@ -3,16 +3,12 @@
         <div class="col">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
-        <div class="col">↓</div>
-        <div class="col">
+        <div class="col d-none d-xs-block">↓</div>
+        <div class="col d-none d-xs-block">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
         <div class="col d-none d-sm-block">↓</div>
         <div class="col d-none d-sm-block">
-            <h2 class="tb_title">{{ title }}</h2>
-        </div>
-        <div class="col d-none d-md-block">↓</div>
-        <div class="col d-none d-md-block">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
         <div class="col d-none d-md-block">↓</div>
@@ -25,6 +21,10 @@
         </div>
         <div class="col d-none d-xl-block">↓</div>
         <div class="col d-none d-xl-block">
+            <h2 class="tb_title">{{ title }}</h2>
+        </div>
+        <div class="col d-none d-xxl-block">↓</div>
+        <div class="col d-none d-xxl-block">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
     </div>
