--- a/web/app/themes/inside/views/sections/section-livefeed.twig
+++ b/web/app/themes/inside/views/sections/section-livefeed.twig
@@ -1,11 +1,11 @@
 {% include 'parts/title-banner.twig' with { title: "live" } %}
 <div class="container">
-  <div class="row schedule">
-    <div class="col-12 col-md-4">Année préparatoire →  14h</div>
-    <div class="col-12 col-md-4">Interactive Media Designer →  15h</div>
-    <div class="col-12 col-md-4">Maturité Post-CFC MP2 →  16h</div>
+  <div class="row schedule text-center my-4">
+    <div class="col-12 col-md-4 my-2">Année préparatoire →  14h</div>
+    <div class="col-12 col-md-4 my-2">Interactive Media Designer →  15h</div>
+    <div class="col-12 col-md-4 my-2">Maturité Post-CFC MP2 →  16h</div>
   </div>
-  <div class="ratio ratio-16x9">
+  <div class="ratio ratio-16x9 mb-3">
     <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="live_input mb-5">
