--- a/web/app/themes/inside/views/sections/section-vlog.twig
+++ b/web/app/themes/inside/views/sections/section-vlog.twig
@@ -1,9 +1,7 @@
-<div class="container vlog">
-  <div class="d-flex justify-content-center align-items-center">
-    <div class="dvlog">
-      <div class="ratio ratio-16x9 vlog">
-        <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-      </div>
+<div class="container pb-5">
+  <div class="vlog-frame ratio ratio-16x9">
+    <div class="iframe-container">
+      <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
     </div>
   </div>
 </div>
