--- a/web/app/themes/inside/views/sections/section-director.twig
+++ b/web/app/themes/inside/views/sections/section-director.twig
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="ratio ratio-16x9">
-  <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-</div>
+    {{ post.get_field('video_director') }}
+  </div>
 </div>
