--- a/web/app/themes/inside/views/sections/section-vlog.twig
+++ b/web/app/themes/inside/views/sections/section-vlog.twig
@@ -1,7 +1,7 @@
 <div class="container pb-5">
-  <div class="vlog-frame ratio ratio-16x9">
+  <div class="vlog-frame ratio ratio-custom">
     <div class="iframe-container">
-      <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+      {{ post.get_field('video_vlog') }}
     </div>
   </div>
 </div>
