--- a/web/app/themes/inside/assets/scss/components/header.scss
+++ b/web/app/themes/inside/assets/scss/components/header.scss
@@ -21,14 +21,7 @@
 }
 
 .container.landing {
-  margin: 0 auto 70px auto;
-}
-
-.homepagetitle {
-  margin-top: 50px;
-  text-transform: uppercase;
-  font-size: 80px;
-  line-height: 100px;
+  margin: 0 auto 70px;
 }
 
 .landing {
@@ -48,9 +41,18 @@
   }
 }
 
-@include media-breakpoint-down(lg) {
-  .homepagetitle {
-    font-size: 45px;
-    line-height: 55px;
+.landing {
+  .description {
+    max-width: 700px;
+  }
+
+  .title {
+    font-size: 80px;
+    line-height: 1;
+    text-transform: uppercase;
+
+    @include media-breakpoint-down(lg) {
+      font-size: 45px;
+    }
   }
 }
