--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -1,15 +1,9 @@
 <div class="container landing">
-	<div class="row">
-		<div class="col">
-			<h1 class="homepagetitle">Bienvenue à <u>Inside.eikon</u> !</h1>
-		</div>
-		<p class="landing">
-			Cette année, nous avons décidé de changer notre conception des journées portes ouvertes d'eikon, c'est pourquoi nous les effectuons sur ce site.
-			<br>Vous trouverez ici toutes les informations utiles sur chacunes de nos formations.
-		</p>
-		<div class="col-6"></div>
-		<div class="col-md-6 col-xs-12 d-flex justify-content-end">
-			<a href="#livefeed" class="jpo_btn">Vous êtes venus pour le live ? C'est par ici !  →</a>
-		</div>
-	</div>
+  <h1 class="title mt-5 mb-4">Bienvenue à <u>Inside.eikon</u> !</h1>
+  <div class="mb-5">
+    <p class="description">
+      {{ post.content }}
+    </p>
+  </div>
+  <a href="#livefeed" class="jpo_btn">Vous êtes venus pour le live ? C'est par ici !  →</a>
 </div>
