--- a/web/app/themes/inside/views/sections/section-showreel.twig
+++ b/web/app/themes/inside/views/sections/section-showreel.twig
@@ -1,4 +1,4 @@
 {% include 'parts/title-banner.twig' with { title: "showreel" } %}
 <div class="ratio ratio-16x9 m-0">
-  <iframe src="https://player.vimeo.com/video/369521302?h=64aa6feb2c" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+  {{ post.get_field('video_showreel') }}
 </div>
