--- a/web/app/themes/inside/views/sections/section-vlog.twig
+++ b/web/app/themes/inside/views/sections/section-vlog.twig
@@ -1,7 +1,9 @@
-<div class="container pb-5">
-  <div class="vlog-frame ratio ratio-custom">
-    <div class="iframe-container">
-      {{ post.get_field('video_vlog') }}
+{% if post.get_field('video_vlog') %}
+  <div class="container pb-5">
+    <div class="vlog-frame ratio ratio-custom">
+      <div class="iframe-container">
+        {{ post.get_field('video_vlog') }}
+      </div>
     </div>
   </div>
-</div>
+{% endif %}
