--- a/web/app/themes/inside/assets/scss/components/navhub.scss
+++ b/web/app/themes/inside/assets/scss/components/navhub.scss
@@ -1,7 +1,7 @@
 .nhub_container {
   width: 100%;
   height: 700px;
-  background-image: url(../img/backgrounds/bgnavhub.png);
+  background-image: url(../img/backgrounds/bgnavhub.jpg);
   background-size: cover;
   display: flex;
   justify-content: center;
