--- a/web/app/themes/inside/views/parts/header.twig
+++ b/web/app/themes/inside/views/parts/header.twig
@@ -9,7 +9,7 @@
       </div>
       {% if options.url_inscription %}
         <div class="header_nav">
-          <a href="{{ options.url_inscription }}" target="_blank">Inscriptions →</a>
+          <a href="{{ options.url_inscription }}" target="_blank">Inscriptions<span class="d-none d-sm-inline"> →</span></a>
         </div>
       {% endif %}
     </div>
