--- a/web/app/themes/inside/views/parts/title-banner.twig
+++ b/web/app/themes/inside/views/parts/title-banner.twig
@@ -3,8 +3,8 @@
         <div class="col">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
-        <div class="col d-none d-xs-block">↓</div>
-        <div class="col d-none d-xs-block">
+        <div class="col d-none">↓</div>
+        <div class="col d-none">
             <h2 class="tb_title">{{ title }}</h2>
         </div>
         <div class="col d-none d-sm-block">↓</div>
