--- a/web/app/themes/inside/assets/scss/components/forms.scss
+++ b/web/app/themes/inside/assets/scss/components/forms.scss
@@ -9,6 +9,13 @@
   color: black;
   text-decoration: none;
   font-size: 16px;
+  display: inline-block;
+
+  @include media-breakpoint-down(lg) {
+    padding: 5px 13px 4px;
+    border-radius: 20px;
+    font-size: 15px;
+  }
 
   &:hover {
     background: black;
