--- a/web/app/themes/inside/assets/scss/components/header.scss
+++ b/web/app/themes/inside/assets/scss/components/header.scss
@@ -6,6 +6,10 @@
   top: 0;
   background: white;
   z-index: 9999;
+
+  @include media-breakpoint-down(sm) {
+    font-size: 0.85rem;
+  }
 }
 
 .header_nav {
@@ -34,6 +38,10 @@
 
   .menu-item {
     margin: 0 1rem;
+
+    @include media-breakpoint-down(sm) {
+      margin: 0 0.25rem;
+    }
   }
 
   .current-menu-item {
