maj videos page

--- a/web/app/themes/inside/assets/scss/components/title-banner.scss
+++ b/web/app/themes/inside/assets/scss/components/title-banner.scss
@@ -47,3 +47,14 @@
     line-height: 20px;
   }
 }
+
+.title_redif {
+  font-size: 22px;
+  text-transform: uppercase;
+  text-orientation: mixed;
+  writing-mode: tb-rl;
+}
+
+h1 {
+  font-size: 80px;
+}
