--- a/web/app/themes/inside/assets/scss/components/videos.scss
+++ b/web/app/themes/inside/assets/scss/components/videos.scss
@@ -2,7 +2,8 @@
   --bs-aspect-ratio: 63.25%;
 }
 
-.vlog-frame {
+.vlog-frame,
+.redif-frame {
   background-image: url(../img/backgrounds/rectangle_upleft_empty.svg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -42,7 +43,7 @@
 .vm_block iframe {
   top: 6.5%;
   left: 1.9%;
-  background: rgba(0, 0, 0, .5);
+  background: black;
   position: absolute;
   box-sizing: border-box;
   width: 93%;
