--- a/web/app/themes/inside/views/single-project.twig
+++ b/web/app/themes/inside/views/single-project.twig
@@ -2,18 +2,18 @@
 
 {% block content %}
   {% if archive_page_url %}
-    <div class="container mt-5 mb-5 mb-md-3 p-0 d-flex justify-content-center justify-content-md-left">
+    <div class="container mt-5 mb-5 mb-md-3 p-0 d-flex justify-content-center justify-content-md-start">
       <a href="{{ archive_page_url }}" class="jpo_btn ml-0">
         ← {{ archive_page_name }}
       </a>
     </div>
   {% endif %}
   <div class="container mb-5">
-    <div class="row border-md border-dark">
-      <div class="col-md-8 p-0">
+    <div class="row project-cartouche">
+      <div class="col-md-8 project-slider">
         {% include 'components/galerie-slider.twig' with {galerie: post.get_field("galerie")} %}
       </div>
-      <div class="col-md-4 border-md-start border-dark p-4">
+      <div class="col-md-4 p-4 project-infos">
         <div class="mb-3">
           <h1>{{ post.title }}</h1>
           <span class="badge badge-dark">
