--- a/web/app/themes/inside/assets/scss/components/title-banner.scss
+++ b/web/app/themes/inside/assets/scss/components/title-banner.scss
@@ -55,6 +55,20 @@
   writing-mode: tb-rl;
 }
 
-h1 {
+.page_title {
   font-size: 80px;
+}
+
+.page_desc {
+  padding-left: 30%;
+}
+
+@include media-breakpoint-down(lg) {
+  .page_title {
+    font-size: 40px;
+  }
+
+  .page_desc {
+    padding-left: 0;
+  }
 }
