--- a/web/app/themes/inside/views/parts/footer.twig
+++ b/web/app/themes/inside/views/parts/footer.twig
@@ -35,7 +35,7 @@
 									<a href="https://www.instagram.com/eikon.fribourg/?hl=fr" target="_blank"><img src="{{ theme.link }}/dist/img/cta_instagram.svg" alt="logo d'Instagram."></a>
 								</div>
 								<div class="col">
-									<a href="https://ch.linkedin.com/company/eikonschool" target="_blank"><img src="{{ theme.link }}/dist/img/cta_linkedin.svg" alt="logo de Linkedin."></a>
+									<a href="https://www.fr.ch/eikon" target="_blank"><img src="{{ theme.link }}/dist/img/cta_website.svg" alt="logo de site internet."></a>
 								</div>
 							</div>
 						</div>
