--- a/web/app/themes/inside/views/sections/section-livefeed.twig
+++ b/web/app/themes/inside/views/sections/section-livefeed.twig
@@ -1,18 +1,20 @@
 {% if post.get_field('video_livefeed') %}
-  {% include 'parts/title-banner.twig' with { title: "live" } %}
-  <div class="container">
-    <div class="row schedule text-center my-4">
-      <div class="col-12 col-md-4 my-2">Année préparatoire →  14h</div>
-      <div class="col-12 col-md-4 my-2">Interactive Media Designer →  15h</div>
-      <div class="col-12 col-md-4 my-2">Maturité Post-CFC MP2 →  16h</div>
-    </div>
-    <div class="ratio ratio-16x9 mb-3">
-      {{ post.get_field('video_livefeed') }}
-    </div>
-    <div class="live_input mb-5">
-      {% if options.contact_form_shortcode %}
-        {{ function('do_shortcode', options.contact_form_shortcode) }}
-      {% endif %}
+  <div id="livefeed">
+    {% include 'parts/title-banner.twig' with { title: "live" } %}
+    <div class="container">
+      <div class="row schedule text-center my-4">
+        <div class="col-12 col-md-4 my-2">Année préparatoire →  14h</div>
+        <div class="col-12 col-md-4 my-2">Interactive Media Designer →  15h</div>
+        <div class="col-12 col-md-4 my-2">Maturité Post-CFC MP2 →  16h</div>
+      </div>
+      <div class="ratio ratio-16x9 mb-3">
+        {{ post.get_field('video_livefeed') }}
+      </div>
+      <div class="live_input mb-5">
+        {% if options.contact_form_shortcode %}
+          {{ function('do_shortcode', options.contact_form_shortcode) }}
+        {% endif %}
+      </div>
     </div>
   </div>
 {% endif %}
