--- a/web/app/themes/inside/assets/scss/components/videos.scss
+++ b/web/app/themes/inside/assets/scss/components/videos.scss
@@ -26,7 +26,7 @@
   }
 }
 
-.containerfull.vm {
+.vm {
   background-image: url(../img/backgrounds/bgvideomaton.jpg);
   background-repeat: no-repeat;
   background-size: cover;
