--- a/web/app/themes/inside/views/page.twig
+++ b/web/app/themes/inside/views/page.twig
@@ -25,15 +25,21 @@
 	</div>
 	{% if post.get_field('videomaton') %}
 		{% include 'parts/title-banner.twig' with { title: "Videomaton" } %}
-		<div class="containerfull vm py-5">
-      <div class="col-6 mx-auto">
-		<div class="vm_block">
-			<div class="ratio ratio-1x1">
-			{{post.get_field('video')}}
-			</div>
-		</div>
+    <div class="vm py-5">
+      <div class="container my-5">
+        <div class="row">
+          {% for item in post.get_field('videomaton') %}
+            <div class="col-6">
+              <div class="vm_block">
+                <div class="ratio ratio-1x1">
+                {{ item.video }}
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
       </div>
-		</div>
+    </div>
 	{% endif %}
 
 	{% if projects %}
