--- a/web/app/themes/inside/views/html-header.twig
+++ b/web/app/themes/inside/views/html-header.twig
@@ -18,4 +18,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="pingback" href="{{ site.pingback_url }}" />
   <link rel="profile" href="http://gmpg.org/xfn/11">
+  <script src="{{ site.theme.path }}/dist/main.js"></script>
   {{function('wp_head')}}
