photoswipe, first pass

--- a/web/app/themes/inside/assets/scss/main.scss
+++ b/web/app/themes/inside/assets/scss/main.scss
@@ -1,6 +1,7 @@
 @import "config/bootstrap/bootstrap";
 @import "config/typography";
 @import "config/layout";
+@import "config/photoswipe";
 
 @import "components/button";
 @import "components/forms";
