--- a/web/app/themes/inside/views/page.twig
+++ b/web/app/themes/inside/views/page.twig
@@ -45,7 +45,7 @@
 	{% if projects %}
 		{% include 'parts/title-banner.twig' with { title: "Travaux" } %}
 		<div class="container py-5">
-			<div class="grid">
+			<div class="grid inside-gallery">
 				<div class="grid-sizer"></div>
 				{% for project in projects %}
 					<div class="grid-item">
