--- a/web/app/themes/inside/views/base.twig
+++ b/web/app/themes/inside/views/base.twig
@@ -28,5 +28,19 @@
         {{ function('wp_footer') }}
       {% endblock %}
     </div>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script
+        async
+        src="https://www.googletagmanager.com/gtag/js?id=G-J33VHG9V1K"
+      ></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+          dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+
+        gtag("config", "G-J33VHG9V1K");
+      </script>
 	</body>
 </html>
