--- a/web/app/themes/inside/views/page.twig
+++ b/web/app/themes/inside/views/page.twig
@@ -47,7 +47,7 @@
 		<div class="container py-5">
 			<div class="grid">
 				<div class="grid-sizer"></div>
-				{% for project in projects %}
+				{% for project in projects|shuffle %}
 					<div class="grid-item">
 						<a class="project-teaser" href="{{ project.link }}">
               <div class="project-thumbnail">
