--- a/web/app/themes/inside/assets/scss/components/forms.scss
+++ b/web/app/themes/inside/assets/scss/components/forms.scss
@@ -19,8 +19,8 @@
   }
 
   &:hover {
-    background: black;
-    color: white;
+    background: black!important;
+    color: white!important;
   }
 }
 
