--- a/web/app/themes/inside/views/parts/footer.twig
+++ b/web/app/themes/inside/views/parts/footer.twig
@@ -7,12 +7,12 @@
 						<div class="d-flex justify-content-center align-items-center footer_cta_lg">
 							<div class="col">
 								<div class="d-flex justify-content-center footer_logos mx-2 mx-md-0">
-									<img src="{{ theme.link }}/dist/img/logo_eikon.svg" alt="logo d'eikon.">
+									<img src="{{ theme.link }}/dist/img/logo_eikon.svg" class="w-100" alt="logo d'eikon.">
 								</div>
 							</div>
 							<div class="col">
 								<div class="d-flex justify-content-center footer_logos mx-2 mx-md-0">
-									<img src="{{ theme.link }}/dist/img/logo_etatfr.svg" alt="logo de l'Etat de Fribourg.">
+									<img src="{{ theme.link }}/dist/img/logo_etatfr.svg" class="w-100" alt="logo de l'Etat de Fribourg.">
 								</div>
 							</div>
 						</div>
