--- a/web/app/themes/inside/views/sections/section-livefeed.twig
+++ b/web/app/themes/inside/views/sections/section-livefeed.twig
@@ -1,5 +1,5 @@
 {% if post.get_field('video_livefeed') %}
-  <div id="livefeed">
+  <div>
     {% include 'parts/title-banner.twig' with { title: "live" } %}
     <div class="container">
       <div class="row schedule text-center my-4">
