--- a/web/app/themes/inside/views/front-page.twig
+++ b/web/app/themes/inside/views/front-page.twig
@@ -1,12 +1,24 @@
 {% extends "base.twig" %}
 
+
 {% block content %}
-  {% include 'sections/section-landing.twig' %}
-  {% include 'sections/section-director.twig' %}
-  {% include 'sections/section-bigtitle.twig' %}
-  {% include 'sections/section-vlog.twig' %}
-  {% include 'sections/section-livefeed.twig' %}
-  {% include 'sections/section-navigationhub.twig' %}
-  {% include 'sections/section-showreel.twig' %}
-  {% include 'sections/section-inscription.twig' %}
+  {% if post.on_air %}
+    {% include 'sections/section-landing.twig' %}
+    {% include 'sections/section-livefeed.twig' %}
+    {% include 'sections/section-director.twig' %}
+    {% include 'sections/section-bigtitle.twig' %}
+    {% include 'sections/section-vlog.twig' %}
+    {% include 'sections/section-navigationhub.twig' %}
+    {% include 'sections/section-showreel.twig' %}
+    {% include 'sections/section-inscription.twig' %}
+  {% else %}
+    {% include 'sections/section-landing.twig' %}
+    {% include 'sections/section-showreel.twig' %}
+    {% include 'sections/section-director.twig' %}
+    {% include 'sections/section-bigtitle.twig' %}
+    {% include 'sections/section-vlog.twig' %}
+    {% include 'sections/section-livefeed.twig' %}
+    {% include 'sections/section-navigationhub.twig' %}
+    {% include 'sections/section-inscription.twig' %}
+  {% endif %}
 {% endblock %}
