--- a/web/app/themes/inside/views/parts/header.twig
+++ b/web/app/themes/inside/views/parts/header.twig
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="d-flex justify-content-between align-items-center">
       <div class="header_nav">
-        <a href="{{ site.link }}">Inside eikon</a>
+        <a href="{{ site.link }}">inside.eikon</a>
       </div>
       <div class="header_nav">
         {% include 'parts/menu.twig' %}
