--- a/web/app/themes/inside/assets/scss/config/layout.scss
+++ b/web/app/themes/inside/assets/scss/config/layout.scss
@@ -6,8 +6,14 @@
 
 .project-cartouche {
   border: 1px solid black;
+  margin: 0 15px;
 
   .project-infos {
-    border-left: 1px solid black;
+    border-top: 1px solid black;
+
+    @include media-breakpoint-up(lg) {
+      border-top: 0;
+      border-left: 1px solid black;
+    }
   }
 }
