--- a/web/app/themes/inside/assets/scss/components/project-teaser.scss
+++ b/web/app/themes/inside/assets/scss/components/project-teaser.scss
@@ -18,7 +18,8 @@
   }
 
   .project-data {
-    padding: 0.25rem 0 1rem;
+    padding: 0.4rem 0 1rem;
+    line-height: 1.1;
   }
 
   .project-thumbnail {
