Redo the footer

--- a/web/app/themes/inside/assets/scss/components/footer.scss
+++ b/web/app/themes/inside/assets/scss/components/footer.scss
@@ -32,3 +32,15 @@
 .footer_logos {
   width: 70px;
 }
+
+.social-link {
+  width: 40px;
+  height: auto;
+  display: inline-block;
+
+  img {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+}
