--- a/web/app/themes/inside/views/parts/footer.twig
+++ b/web/app/themes/inside/views/parts/footer.twig
@@ -17,6 +17,9 @@
 							</div>
 						</div>
 					</div>
+          <p class="mt-4 text-center text-md-start">
+            <a href="/credits">Credits</a>
+          </p>
 				</div>
 				<div class="col mb-5 mb-md-0">
 					<div class="d-flex justify-content-center">
@@ -24,24 +27,17 @@
 					</div>
 				</div>
 				<div class="col">
-					<div class="footer_cta">
+					<div class="text-center text-md-end">
 						<p>Suivez-nous sur :</p>
-						<div class="footer_cta_sn">
-							<div class="row">
-								<div class="col">
-									<a href="https://fr-fr.facebook.com/eikon.fribourg/" target="_blank"><img src="{{ theme.link }}/dist/img/cta_facebook.svg" alt="logo de Facebook."></a>
-								</div>
-								<div class="col">
-									<a href="https://www.instagram.com/eikon.fribourg/?hl=fr" target="_blank"><img src="{{ theme.link }}/dist/img/cta_instagram.svg" alt="logo d'Instagram."></a>
-								</div>
-								<div class="col">
-									<a href="https://www.fr.ch/eikon" target="_blank"><img src="{{ theme.link }}/dist/img/cta_website.svg" alt="logo de site internet."></a>
-								</div>
-							</div>
+						<div class="mb-3 d-flex align-items-center justify-content-end">
+              <a class="social-link mx-1" href="https://fr-fr.facebook.com/eikon.fribourg/" target="_blank"><img src="{{ theme.link }}/dist/img/cta_facebook.svg" alt="logo de Facebook."></a>
+              <a class="social-link mx-1" href="https://www.instagram.com/eikon.fribourg/?hl=fr" target="_blank"><img src="{{ theme.link }}/dist/img/cta_instagram.svg" alt="logo d'Instagram."></a>
+              <a class="social-link mx-1 mr-0" href="https://www.fr.ch/eikon" target="_blank"><img src="{{ theme.link }}/dist/img/cta_website.svg" alt="logo de site internet."></a>
 						</div>
-						<p>
+						<p class="m-0">
 							<a href="https://www.fr.ch/eikon/inscriptions-online" target="_blank">→ Inscription</a>
 						</p>
+
 					</div>
 				</div>
 			</div>
