Fixes the gutter on single project view

--- a/web/app/themes/inside/assets/scss/config/layout.scss
+++ b/web/app/themes/inside/assets/scss/config/layout.scss
@@ -6,7 +6,7 @@
 
 .project-cartouche {
   border: 1px solid black;
-  margin: 0 15px;
+  margin: 0;
 
   .project-infos {
     border-top: 1px solid black;
