--- a/web/app/themes/inside/views/sections/section-navigationhub.twig
+++ b/web/app/themes/inside/views/sections/section-navigationhub.twig
@@ -1,8 +1,8 @@
 {% include 'parts/title-banner.twig' with { title: "Formations" } %}
 <div class="nhub_container">
     <div class="d-flex flex-column justify-content-center align-items-center">
-      <a href="/annee-preparatoire" class="jpo_btn my-2">Année préparatoire</a>
-      <a href="/interactive-media-designer" class="jpo_btn my-2">Interactive Media Designer</a>
-      <a href="/maturite-artistique-post-cfc" class="jpo_btn my-2">Maturité professionnelle artistique</a>
+      <a href="/annee-preparatoire" class="jpo_btn my-2">Année préparatoire – PREPA</a>
+      <a href="/interactive-media-designer" class="jpo_btn my-2">Interactive Media Designer – IMD</a>
+      <a href="/maturite-artistique-post-cfc" class="jpo_btn my-2">Maturité professionnelle artistique – MP2</a>
   </div>
 </div>
