Removes the inscription section from the homepage

--- a/web/app/themes/inside/views/front-page.twig
+++ b/web/app/themes/inside/views/front-page.twig
@@ -10,7 +10,7 @@
     {% include 'sections/section-vlog.twig' %}
     {% include 'sections/section-navigationhub.twig' %}
     {% include 'sections/section-showreel.twig' %}
-    {% include 'sections/section-inscription.twig' %}
+    {# {% include 'sections/section-inscription.twig' %} #}
   {% else %}
     {% include 'sections/section-landing.twig' %}
     {% include 'sections/section-showreel.twig' %}
@@ -19,6 +19,6 @@
     {% include 'sections/section-vlog.twig' %}
     {% include 'sections/section-livefeed.twig' %}
     {% include 'sections/section-navigationhub.twig' %}
-    {% include 'sections/section-inscription.twig' %}
+    {# {% include 'sections/section-inscription.twig' %} #}
   {% endif %}
 {% endblock %}
