hotfix the footer

--- a/web/app/themes/inside/views/parts/footer.twig
+++ b/web/app/themes/inside/views/parts/footer.twig
@@ -18,7 +18,7 @@
 						</div>
 					</div>
           <p class="mt-4 text-center text-md-start">
-            <a href="/credits">Credits</a>
+            <a href="/credits">Crédits</a>
           </p>
 				</div>
 				<div class="col mb-5 mb-md-0">
@@ -34,10 +34,6 @@
               <a class="social-link mx-1" href="https://www.instagram.com/eikon.fribourg/?hl=fr" target="_blank"><img src="{{ theme.link }}/dist/img/cta_instagram.svg" alt="logo d'Instagram."></a>
               <a class="social-link mx-1 mr-0" href="https://www.fr.ch/eikon" target="_blank"><img src="{{ theme.link }}/dist/img/cta_website.svg" alt="logo de site internet."></a>
 						</div>
-						<p class="m-0">
-							<a href="https://www.fr.ch/eikon/inscriptions-online" target="_blank">→ Inscription</a>
-						</p>
-
 					</div>
 				</div>
 			</div>
