--- a/web/app/themes/inside/views/parts/footer.twig
+++ b/web/app/themes/inside/views/parts/footer.twig
@@ -7,7 +7,7 @@
 						<div class="d-flex justify-content-center align-items-center footer_cta_lg">
 							<div class="col">
 								<div class="d-flex justify-content-center footer_logos mx-2 mx-md-0">
-									<img src="{{ theme.link }}/dist/img/logo_eikon.svg" class="w-100" alt="logo d'eikon.">
+									<img src="{{ theme.link }}/dist/img/logo_eikon_full_white.svg" class="w-100" alt="logo d'eikon.">
 								</div>
 							</div>
 							<div class="col">
