--- a/web/app/themes/inside/views/sections/section-landing.twig
+++ b/web/app/themes/inside/views/sections/section-landing.twig
@@ -1,5 +1,5 @@
 <div class="container landing">
-  <h1 class="title mt-5 mb-4">Bienvenue à <u>Inside.eikon</u> !</h1>
+  <h1 class="title mt-5 mb-4">Bienvenue à <u>Inside.eikon</u></h1>
   <div class="mb-5">
     <p class="description">
       {{ post.content }}
