Adds mention of the date of the live stream

--- a/web/app/themes/inside/views/page-section.twig
+++ b/web/app/themes/inside/views/page-section.twig
@@ -15,7 +15,7 @@
 				</div>
 			</div>
 		</div>
-		<h2 class="title_redif">Rediffusion du live</h2>
+		<h2 class="title_redif">Rediffusion du live des<br> portes ouvertes du 20.11.21</h2>
 	  </div>
       {% endif %}
 		<div class="container page_desc my-3 my-md-5">
