Rebrand the website and adapt some texts

--- a/web/app/themes/inside/views/sections/section-vlog.twig
+++ b/web/app/themes/inside/views/sections/section-vlog.twig
@@ -1,5 +1,6 @@
 {% if post.get_field('video_vlog') %}
   <div class="container pb-5">
+    <h2>Visite guidée de eikon</h2>
     <div class="vlog-frame ratio ratio-custom">
       <div class="iframe-container">
         {{ post.get_field('video_vlog') }}
