--- a/web/app/themes/inside/assets/scss/main.scss
+++ b/web/app/themes/inside/assets/scss/main.scss
@@ -3,6 +3,7 @@
 @import "config/layout";
 
 @import "components/button";
+@import "components/cartouche";
 @import "components/forms";
 @import "components/footer";
 @import "components/header";
